tests/machine/x/go/group_by_multi_join_sort.error
Error on line 0: run error: exit status 1
# command-line-arguments
../../../tests/machine/x/go/group_by_multi_join_sort.go:107:15: undefined: v
../../../tests/machine/x/go/group_by_multi_join_sort.go:164:95: invalid operation: (float64(1) - (_getField(_getField(x, "l"), "l_discount")).(float64)) (value of type float64) is not an interface
../../../tests/machine/x/go/group_by_multi_join_sort.go:203:96: invalid operation: (float64(1) - (_getField(_getField(x, "l"), "l_discount")).(float64)) (value of type float64) is not an interface

1: //go:build ignore
